cloud-server/cloud-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-server-service
spec:
  selector:
    app: cloud-server
  ports:
    - protocol: TCP
      port: 9099
      targetPort: 9099
  type: NodePort
